# page-analyzer

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  requirements.txt
page_analyzer/: __init__.py  app.py  db.py
page_analyzer/controllers/: urls.py
page_analyzer/models/: url.py  url_check.py
page_analyzer/templates/: 404.html  index.html  layout.html  one_url.html  urls.html
page_analyzer/templates/components/: flash_messages.html
